@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-12T16:08:25Z",
-  "count_outdated" : 53,
-  "uniques_outdated" : 44,
-  "count" : 73,
-  "uniques" : 61,
+  "timestamp" : "2022-09-13T00:33:01Z",
+  "count_outdated" : 62,
+  "uniques_outdated" : 51,
+  "count" : 77,
+  "uniques" : 64,
   "clones" : [
-    {
-      "timestamp": "2022-08-29T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 5, 9 ],
-      "uniques": 4,
-      "uniques_minmax": [ 4, 7 ]
-    },
     {
       "timestamp": "2022-08-30T00:00:00Z",
       "count": 7,
