@@ -1,12 +1,7 @@
 {
-  "count": 20,
-  "uniques": 10,
+  "count": 15,
+  "uniques": 9,
   "clones": [
-    {
-      "timestamp": "2022-08-29T00:00:00Z",
-      "count": 5,
-      "uniques": 4
-    },
     {
       "timestamp": "2022-08-30T00:00:00Z",
       "count": 7,
